fixing photo zoom bug

--- a/PhenoPad/CustomControl/NotePageControl.xaml
+++ b/PhenoPad/CustomControl/NotePageControl.xaml
@@ -372,7 +372,7 @@
                     <DataTemplate x:DataType="fileservice:ImageAndAnnotation">
                         <Button Click="addInIcon_Click" HorizontalAlignment="Center" Width="200"
                                 Style="{StaticResource ButtonStyle1}">
-                            <Viewbox Name="AddInIcon" Stretch="Uniform">
+                            <Viewbox Name="AddInIcon" Stretch="Uniform" CanDrag="False">
                                 <customcontrol:AddInControl name="{x:Bind name}" notebookId="{x:Bind notebookId}" 
                                                         viewOnly="True" pageId="{x:Bind pageId}" />
                             </Viewbox>
