--- a/PhenoPad/CustomControl/AddInControl.xaml
+++ b/PhenoPad/CustomControl/AddInControl.xaml
@@ -20,9 +20,9 @@
             <x:Double x:Key="categoryButtonFontSize">27</x:Double>
         </ResourceDictionary>
     </UserControl.Resources>
-    <!--<UserControl.RenderTransform>
+    <UserControl.RenderTransform>
         <ScaleTransform x:Name="resize" />
-    </UserControl.RenderTransform>-->
+    </UserControl.RenderTransform>
 
 
 
@@ -45,11 +45,7 @@
                               HorizontalScrollBarVisibility="Auto">
                 <Grid x:Name="scrollGrid">
                     <Viewbox Name="canvasViewBox">
-                        <InkCanvas Visibility="Collapsed" x:Name="inkCanvas" Canvas.ZIndex="5">
-                            <InkCanvas.RenderTransform>
-                                <ScaleTransform x:Name="canvasSize" />
-                            </InkCanvas.RenderTransform>
-                        </InkCanvas>
+                        <InkCanvas Visibility="Collapsed" x:Name="inkCanvas" Canvas.ZIndex="5"/>
                     </Viewbox>
                 </Grid>
             </ScrollViewer>
