--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -41,17 +41,21 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        
         <Grid Name="TopMenuRelativePanel" Grid.Row="0" Background="{StaticResource TITLE_BAR_WHITE}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            
             <StackPanel Orientation="Horizontal" Grid.Column="0" >
                 <Button Name="BackButton" Click="BackButton_Click" Width="40"  Background="{StaticResource Button_Background}" BorderThickness="0" VerticalAlignment="Stretch">
                     <SymbolIcon Symbol="Back"></SymbolIcon>
                 </Button>
-                <TextBox Name="noteNameTextBox" KeyDown="noteNameTextBox_KeyDown"  LostFocus="noteNameTextBox_LostFocus" BorderThickness="0" Background="{StaticResource TITLE_BAR_WHITE}" FontSize="18" Text="" Margin="5 0 0 0" VerticalAlignment="Center"></TextBox>
+                <TextBox Name="noteNameTextBox" KeyDown="noteNameTextBox_KeyDown"  LostFocus="noteNameTextBox_LostFocus" 
+                         BorderThickness="0" Background="{StaticResource TITLE_BAR_WHITE}" FontSize="18" Text="" Margin="5 0 0 0" 
+                         VerticalAlignment="Center"></TextBox>
             </StackPanel>
 
             <CommandBar Grid.Column="1" HorizontalAlignment="Right" Margin="0 0 30 0"  Name="topCmdBar" OverflowButtonVisibility="Collapsed" Background="{StaticResource TITLE_BAR_WHITE}">
@@ -680,13 +684,23 @@
                         </Storyboard>
                     </RelativePanel.Resources>
 
-                    <TextBlock Visibility="Visible" x:Name="modeTextBlock" Width="240" Margin="10 10 10 10" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignLeftWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="Black" Opacity="0.2">Handwriting Mode</TextBlock>
+                    <TextBlock Visibility="Visible" x:Name="modeTextBlock" Width="190" Height="auto"
+                               RelativePanel.AlignLeftWithPanel="True" 
+                               RelativePanel.AlignBottomWithPanel="True"
+                               Margin="10 10 10 10"
+                               Padding=" 0 0 10 0" FontSize="20" FontFamily="Segoe UI" 
+                               FontWeight="ExtraBold" Foreground="Black" Opacity="0.2">Handwriting Mode</TextBlock>
 
-                    <StackPanel Spacing="2" Background="White" Name="pageIndexPanel"  Margin="0 0 0 0" RelativePanel.Above="CandidateGrid" Orientation="Horizontal"  RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 0 0 0">
+                    <StackPanel Spacing="2" Background="White" Name="pageIndexPanel"  Margin="0 0 0 0" 
+                                RelativePanel.Above="modeTextBlock" Orientation="Horizontal"  
+                                RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 0 0 0"
+                                Canvas.ZIndex="999">
+                        
                         <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
                             <SymbolIcon Symbol="Add" Foreground="{StaticResource Button_Background}" />
                         </Button>
                     </StackPanel>
+                    
                     <Border CornerRadius="10" x:Name="StatusBorder" Margin="0,20,0,0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" MinWidth="500" Height="40">
 
                         <TextBlock x:Name="StatusBlock" FontWeight="Bold" Foreground="White" TextAlignment="Center"
@@ -696,7 +710,7 @@
 
                     <!-- pheotypes user are looking for -->
                     <Grid  Name="CandidateGrid" HorizontalAlignment="Stretch" RelativePanel.AlignRightWithPanel="True" RelativePanel.RightOf="MultimediaPreviewGrid" 
-                           RelativePanel.AlignBottomWithPanel="True">
+                           RelativePanel.AlignTopWithPanel="True">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40" />
                             <ColumnDefinition Width="*" />
